refactor: robust syntheizer handling for empty json leaked text, automated retry loops